Closed Bug 392782 Opened 17 years ago Closed 17 years ago

Intermittent crashes during bloat test on "bm-xserve11" Tinderbox

Categories

(Core :: XPCOM, defect)

PowerPC
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla1.9alpha8

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

()

Details

(Keywords: crash, regression)

Attachments

(2 files)

firefox-bin(22206,0xa000cfe0) malloc: ***  Deallocation of a pointer not malloced: 0x730075; This could be a double free(), or free() called with the middle of an allocated block;

The first crash occurred at 2007-08-16 15:46 AFAICT
I'm hitting the same crash locally on about a third of the time, just starting up and shutting down.
The crash is preceded by a few of these:

WARNING: failed to construct proxy to main thread: file /Users/jruderman/trunk/mozilla/xpcom/threads/nsThreadPool.cpp, line 148

(That warning appears every time shutdown crashes; it doesn't appear at all on shutdowns that succeed.)
Attached file stack traces
A stack for the warning, and stacks for the malloc_printf stuff.

The warning means it's going to fail to kill the thread...
Product: Firefox → Core
QA Contact: general → general
dbaron have additional details in bug 392824, he suspects it could be
a regression from bug 350132.
Blocks: 350132
Component: General → XPCOM
QA Contact: general → xpcom
If there was a race and we delete the new object here:
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/xpcom/proxy/src/nsProxyObjectManager.cpp&rev=1.62&root=/cvsroot&mark=267#236
then we will add the deleted object on line 270, no?
We should return NS_OK after the marked line I think.
Attached patch fix?Splinter Review
I can't reproduce the crash, but if someone that can could try this
patch and see if that helps that would be great.
Comment on attachment 277403 [details] [diff] [review]
fix?

I think this is pretty clearly what was intended, so r+sr+a1.9=dbaron...
Attachment #277403 - Flags: superreview+
Attachment #277403 - Flags: review+
Attachment #277403 - Flags: approval1.9+
Comment on attachment 277403 [details] [diff] [review]
fix?

...and Benjamin can review it when he gets back, just in case we're wrong.
Attachment #277403 - Flags: review?(benjamin)
mozilla/xpcom/proxy/src/nsProxyObjectManager.cpp 	1.63 

-> FIXED
Assignee: nobody → mats.palmgren
Keywords: regression
Target Milestone: --- → mozilla1.9 M8
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment on attachment 277403 [details] [diff] [review]
fix?

Yes, quite.
Attachment #277403 - Flags: review?(benjamin) → review+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: